lll-site.css
:root {
  --blue: #253BFF /*#328CC1 or #90AFC5*/;
  --gold: #DCAE1D;
  --black: #0b0b0b /*#2A3132*/;
  --white: #f6f6f6;
  --red: #670404 /*#763626*/;
  --red40: #763626CC;
  --box: /*rgba(220,174,29,0.5)*/ rgb(0,48,63,1);
  text-decoration: none;
}

/*body {
  background-attachment: fixed;
  background-position: 125% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
  background-color: #ddd;
  /* border: 5px solid var(--red);
} */

#home_bg body {
  background-image: url("lll_cropped.png");
  background-attachment: fixed;
  background-position: 150% 100%;
  background-size: 75%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

#prof_bg body {
  background-image: url("Images/lll1.png");
  background-attachment: fixed;
  background-position: 105% 100%;
  background-size: 40%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

#llc_bg body {
  background-image: url("Leroy_OSU.png");
  background-attachment: fixed;
  background-position: 232% 100%;
  background-size: 85%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

#press_bg body {
  background-image: url("leroy_prof.png");
  background-attachment: fixed;
  background-position: 100% 100%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

#allpress_bg body {
  margin: 20px;
}

a, a:-webkit-any-link {
  text-decoration: none;
  color: var(--blue);
}

.mobile_image {
  height: 300px;
  width: auto;
  border-radius: 50%;
  place-self: center;
  border-bottom: 2px solid var(--gold);
}
.home_mobile_image {
  height: auto;
  width: 100%;
  place-self: center;
  border-radius: 50%;
  border-bottom: 2px solid var(--gold);
}

.prof_mobile_image {
  height: 300px;
  width: auto;
  border-radius: 50%;
  place-self: center;
  border-bottom: 2px solid var(--gold);
}

.book_link a:hover {
  color: var(--blue2);
  text-decoration: underline;
}

.overlay {
  height: 100%;
  width: 100%;
  display: none;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(0, 0, 0);
  background-color: rgb(0, 0, 0, 0.9);
}

.overlay_content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
}

span {
  float: right;
}

@media screen and (max-height: 450px) {
  .overlay a {font-size: 20px}
  .overlay .closebtn {
    font-size: 40px;
    top: 15px;
    right: 35px;
  }
}

.container {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr auto;
  grid-template-rows: 200px 1fr auto 50px;
  grid-template-areas:
    "name     name    name"
    "bio      bio     image"
    "footer   footer  image"
    ".        .        ."
}

.item1 {
  grid-area: name;
}

.item3 {
  grid-area: bio;
  max-width: 500px;
  font-size: 1.2em;
  font-family: serif;
}

.bookstore {
  margin: 35px 0px 35px 0px;
  text-align: center;
}

.book_cover {
  /*border: solid 1px;*/
  width: 250px;
  height: 400px;
  box-shadow: 0 4px 8px 0 rgba(220, 174, 29, 0.2), 0 6px 20px 0 rgba(220, 174, 29, 0.9);
}
.llc_book_cover {
  border: solid 1px;
  width: 150px;
  height: 250px;
}

.item4 {
  display: none;
}

.footer {
  grid-area: footer;
}

h1 {
  font-size: 5em;
  color: var(--black);
  margin-bottom: 5px;
  margin-top: 0px;
}

h2 {
  margin-top: 0px;
  color: var(--gold);
  box-shadow: inset 0 -10px 0 0 var(--blue);
  width: max-content;
}

img {
  height: auto;
  width: 100%;
}

.link-card img {
  height: auto;
  width: auto;
  border-radius: 0%;
}

.donations {
  height: 200px;
}
.paypal {
  text-align: center;
}
.paypal form {
  height: 50px;
}
.paypal form img {
  height: inherit;
}

.video iframe {
  height: 315px;
  width: 500px;
}

.footer ul {
  list-style: none;
  margin-left: 0px;
  padding: 0px;
}
.footer ul li {
  float: left;
  padding-right: 10px;
  font-size: 0.8em;
}
.footer ul li a {
  text-decoration: none;
  text-transform: uppercase;
  color: var(--blue);
  font-family: sans-serif;
}
.footer p {
  font-size: 0.6em;
  font-family: sans-serif;
  color: var(--red);
}
.footer a:hover {
  color: var(--blue2);
}

/* SLIDESHOW STYLING */
#slideshow {
  margin: 50px auto;
  position: relative;
  /*width: 480px;*/
  height: 400px;
  padding: 10px;
  /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);*/
  overflow: hidden;
}

#slideshow > div {
  position: absolute;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
}

/* LLC DONATIONS SECTION */
.disclaimer {
  margin-top: 50px;
  margin-bottom: 50px;
}

.touch ._4g34 {
  color: #253BFF;
}

/* PRESS PAGE LINK STYLING */
.web-link{
    color: #EE3233;
  }

.link-card{
    box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);
    margin: 30px 0 30px 0;
    overflow: hidden;
}

.link-card-logo{
    width: 200px;
    text-align: center;
    padding: 0px 0px 0px 0px;
    float: left;
}

.link-card-link{
  	padding: 1px 75px 15px 15px;
    font-size: 15px;
    width: 100%;
}
.link-card-link a {
  text-decoration: none;
}
.link-card-link p {
  	color: #000;
    padding-right: 10px;
    margin-right: 10px;
}

#press_bg .link-card-link p:nth-child(2) {
  color: var(--blue);
}

.link-red {
    color: red;
}
/* COLLAPSIBLE for ALL MEDIA & PRESS */
button.collapsible::after {
  content: '\002B';
  color: var(--blue);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}
/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: #eee;
  color: var(--black);
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}
/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}
/* Style the collapsible content. Note: hidden by default */
.press_content, .infographics, .papers {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
}

/* MEDIA QUERIES: iPhone X and up */
@media (min-width: 414px) and (max-width: 768px) {
  .container {
    grid-template-rows: auto 200px auto;
    grid-template-areas:
      "image image"
      "name name"
      "bio bio"
      "footer footer"
    }
  #llc_bg .container {
    grid-template-rows: auto 250px auto;
  }
  #allpub_bg .container {
    grid-template-rows: auto 300px auto;
  }
  #home_bg body {
      background-image: url("");
    }
  #prof_bg body {
      background-image: url("");
    }
  #llc_bg body {
      background-image: url("");
    }
  #press_bg body {
      background-image: url("");
    }

  h1 {
    font-size: 4em;
  }

  #slideshow {
    margin: 0px;
    height: 250px;
  }

  .item4 {
    display: grid;
    grid-area: image;
    height: 100%;
    width: auto;
  }
  
  .item3 iframe {
      height: 315px;
      width: 308px;
    }
}

/* MEDIA QUERY: Galaxy S8 screens */
@media (min-width: 361px) and (max-width: 413px) {
  .container {
    grid-template-rows: auto 275px auto;
    grid-template-areas:
      "image image"
      "name name"
      "bio bio"
      "footer footer";
    margin-left: 10px;
    }

    #llc_bg .container {
      grid-template-rows: auto 200px auto;
    }
    #llc_bg h1, #allpress_bg h1 {
      font-size: 3em;
    }
    #prof_bg .container, #press_bg .container {
      grid-template-rows: auto 200px auto;
    }
    #allpress_bg .container {
      grid-template-rows: auto 250px auto;
    }

    #prof_bg .item3 {
      height: 1850px;
    }

    #prof_bg .item3 {
      height: 1750px;
    }

    #prof_bg #slideshow {
      height: 175px;
    }

    #llc_bg #slideshow {
      height: 280px;
    }

    .item3 iframe {
      height: 315px;
      width: 308px;
    }


}

@media (max-width: 360px) {

    #llc_bg .container {
      grid-template-rows: auto 200px auto;
    }
    #llc_bg h1 {
      font-size: 3em;
    }
    #home_bg .container {
      grid-template-rows: auto 200px auto;
    }
    #home_bg h1, #allpub_bg h1, #prof_bg h1, #press_bg h1, #allpress_bg h1 {
      font-size: 3em;
    }
    #allpub_bg .container {
      grid-template-rows: auto 200px auto;
    }
    #prof_bg .container, #press_bg .container {
      grid-template-rows: auto 150px auto;
    }
    #allpress_bg .container {
      grid-template-rows: auto 175px auto;
    }

    .container {
      grid-template-rows: auto 350px auto;
      grid-template-areas:
        "image image"
        "name name"
        "bio bio"
        "footer footer";
      margin-left: 10px;
      }

    #allpress_bg .item3 {
      margin-top:100px;
    }

    .disclaimer {
      margin-top: 0px;
    }

    #prof_bg .item3 {
      height: 1800px;
    }
    #llc_bg .item3 {
      height: 1687px;
    }

    #prof_bg #slideshow {
      height: 175px;
    }

    #llc_bg #slideshow {
      height: 240px;
    }
  
    .item3 iframe {
      height: 315px;
      width: 308px;
    }
  
  #llc_bg .item4 {
    width: 250px;
  }
}

